> Updated script file to fix port.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Institute</title>
+    <title>Sun Tech Computer Institute</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -11,9 +11,10 @@
 <body>
 <header>
     <nav>
-    <div class="logo">Your Logo - Sun Tech Computer Institute</div>
+    <div class="logo"><img src="dark_mode.png" alt="logo"></div>
         <ul>
-            <li><a href="#teachers">Teachers</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#staff">Staff</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="register.html">Register Today</a></li>
             <li><a href="gallery.html">Gallery</a></li>
@@ -21,9 +22,8 @@
         </ul>
     </nav>
 </header>
-
 <main>
-    <section id="teachers" class="center-block">
+    <section id="staff" class="center-block">
         <h2 class="center-block">Our Teachers</h2>
         <div class="teacher-profiles">
             <div class="teacher-card">
