--- a/course_detail.html
+++ b/course_detail.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="logo">Your Logo</div>
         <ul>
-            <li><a href="index.html#teachers">Teachers</a></li>
+            <li><a href="index.html#staff">Teachers</a></li>
             <li><a href="index.html#courses">Courses</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
