--- a/gallery.html
+++ b/gallery.html
@@ -9,10 +9,12 @@
 <body>
 <header>
     <nav>
-        <div class="logo">Your Logo</div>
+        <div class="logo"><img src="assets/dark_mode.png" alt="logo"></div>
         <ul>
-            <li><a href="index.html#staff">Teachers</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#staff">Staff</a></li>
             <li><a href="index.html#courses">Courses</a></li>
+            <li><a href="register.html">Register Today</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="index.html#contact">Contact</a></li>
         </ul>
